Bug 649163.  Stop refcounting the return values from GetCSSParsingEnvironment, where possible.  r=dbaron